derive-ex-tests/tests/compile_fail/derive_debug/not_impl_debug.rs
fn main() {}

struct NotImplDebug;
#[derive(derive_ex::Ex)]
#[derive_ex(Debug)]
struct X {
    field: NotImplDebug,
}
